--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <body>
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#"><h4>Jon Butler</h4></a>
+      <a class="navbar-brand" href="#jb"><h4 id="jb">Jon Butler</h4></a>
 
       <div class="navbar-nav ml-auto">
         <div class="row">
           <div class="col"></div>
           <div class="col">
-            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="index.html">About</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="#">Portfolio</a>
+            <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="Contact.html">Contact</a>
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
         </div>
       </div>
     </main>
-    s
+
     <!--<footer class="footer"><p>&copy Copyright</p></footer>-->
   </body>
 </html>
