--- a/Contact.html
+++ b/Contact.html
@@ -17,7 +17,7 @@
   <body>
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#jb"><Jon id="jb">Jon Butler</h4></a>
+      <a class="navbar-brand" href="#jb"><h4 id="jb">Jon Butler</h4></a>
 
       <div class="navbar-nav ml-auto">
         <div class="row">
@@ -58,9 +58,9 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col">
-            <p></p>
-          </div>
+          <hr />
+          <button>Submit</button>
+          <div class="col"></div>
         </div>
       </div>
     </main>
