--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,26 +14,24 @@
 <body>
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#jb"><h4 id="jb">Jon Butler</h4></a>
 
-          <a class="navbar-brand" href="#jb"><h4 id="jb">Jon Butler</h4></a>
-            
-            <div class="navbar-nav ml-auto">
-                <div class="row">
-                      <div class="col"></div>
-                  <div class="col">
-                      <a class="nav-item nav-link" href="index.html">About</a>
-                  </div>
-                  <div class="col">
-                      <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
-                  </div>
-                  <div class="col">
-                      <a class="nav-item nav-link" href="Contact.html">Contact</a>
-                 </div>
-             </div>   
-          </div> 
+      <div class="navbar-nav ml-auto">
+        <div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <a class="nav-item nav-link" href="index.html">About</a>
+          </div>
+          <div class="col">
+            <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
+          </div>
+          <div class="col">
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
-       
-  </nav>
 <main>
   
   
