--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
             <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="Contact.html">Contact</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
     </nav>
+
     <main>
       <!--card-->
       <div class="card mb-3 cardStyle" style="max-width: 540px;">
