--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <!--nav bar-->
@@ -26,7 +26,7 @@
             <a class="nav-item nav-link" href="index.html">About</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
           </div>
           <div class="col">
             <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -48,7 +48,7 @@
         <div class="row no-gutters">
           <div class="col-md-4">
             <img
-              src="rick_profile.png "
+              src="assets/rick_profile.png "
               class="card-img"
               alt="Rick Sanchez profile picture"
             />
@@ -56,11 +56,10 @@
           <div class="col-md-8">
             <div class="card-body">
               <p class="card-text">
-                I'm Rick from Earth C-137. I'm the greatest Rick of all. I hate
-                everything and everyone execpt for my family. That doesn't
-                include my daughter's idiot of a husband. I often go on
-                adventures with my grandson Morty. Unfortunately he is a
-                complete moron and screws up almost everytime.
+                My name Jon and I've spent the past 15 years working in the
+                casino industry. Having grown tired of the grind I have decided
+                it was time for a career change. I've always had an interest in
+                computers so coding seemed like the perfect choice.
               </p>
               <p class="card-text"><small class="text-muted"> </small></p>
             </div>
@@ -69,8 +68,9 @@
         <div class="row no-gutters">
           <div class="col">
             <p>
-              Getting 'riggity riggty wrecked' is what i do best. It's only way
-              to make it through this miserable existence.
+              Outside of professional life I am a gamer. I play both video games
+              and board games. I am also a fan of most sports and enjoy
+              camping/hiking.
             </p>
           </div>
         </div>
