--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <!--nav bar-->
@@ -26,7 +26,7 @@
             <a class="nav-item nav-link" href="index.html">About</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
           </div>
           <div class="col">
             <a class="nav-item nav-link" href="contact.html">Contact</a>
@@ -53,7 +53,7 @@
               <h5 class="card-text">Email</h5>
               <input type="text" placeholder="exmple@gmail.com" />
               <h5 class="card-text">Message</h5>
-              <input type="text" class="largeInput/>
+              <input type="text" />
             </div>
           </div>
         </div>
