--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,10 +26,10 @@
             <a class="nav-item nav-link" href="index.html">About</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="Portfolio.html">Portfolio</a>
           </div>
           <div class="col">
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
+            <a class="nav-item nav-link" href="Contact.html">Contact</a>
           </div>
         </div>
       </div>
