un commented out footer on contact page

--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <main>
-      <!--jumbotron-->
+      <!--card-->
       <div class="card mb-3 cardStyle mr-auto" style="max-width: 540px;">
         <div class="row no-gutters">
           <div class="col cardTop">
@@ -64,6 +64,6 @@
         </div>
       </div>
     </main>
-    <!--<footer class="footer"><p>&copy Copyright</p></footer>-->
+    <footer class="footer"><p>&copy Copyright</p></footer>
   </body>
 </html>
