added pw generator project

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -46,7 +46,11 @@
         <div class="row">
           <div class="col-6">
             <div class="card m-2 mb-4 first" style="width:400px">
-              <a href="#" class="btn btn-primary">Video Games</a>
+              <a
+                href="https://jbdunks.github.io/Password-Generator"
+                class="btn btn-primary"
+                >Password Generator</a
+              >
             </div>
 
             <div class="card m-2 mb-4 second" style="width:400px">
