uncommented out footer even though it isnt working properly yet

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -78,7 +78,6 @@
       </div>
     </main>
 
-    <!---
-  <footer class="footer"><p>&copy Copyright</p></footer>
-  --></body>
+    <footer class="footer"><p>&copy Copyright</p></footer>
+  </body>
 </html>
