--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
       </div>
     </main>
 
-    <!--<footer class="footer"><p>&copy Copyright</p></footer>-->
+    <footer class="footer"><p>&copy Copyright</p></footer>
   </body>
 </html>
