--- a/Portfolio.html
+++ b/Portfolio.html
@@ -54,7 +54,9 @@
             </div>
 
             <div class="card m-2 mb-4 second" style="width:400px">
-              <a href="#" class="btn btn-primary">Board Games</a>
+              <a href="https://jbdunks.github.io/quiz" class="btn btn-primary"
+                >Comics Quiz</a
+              >
             </div>
           </div>
         </div>
