--- a/Portfolio.html
+++ b/Portfolio.html
@@ -64,7 +64,11 @@
         <div class="row">
           <div class="col-6">
             <div class="card m-2 mb-4 third" style="width:400px">
-              <a href="#" class="btn btn-primary">Day Planner</a>
+              <a
+                href="https://github.com/JBdunks/scheduler"
+                class="btn btn-primary"
+                >Day Planner</a
+              >
             </div>
 
             <div class="card m-2 mb-4 fourth" style="width:400px">
