--- a/Portfolio.html
+++ b/Portfolio.html
@@ -65,7 +65,7 @@
           <div class="col-6">
             <div class="card m-2 mb-4 third" style="width:400px">
               <a
-                href="https://github.com/JBdunks/scheduler"
+                href="https://jbdunks.github.io/scheduler/"
                 class="btn btn-primary"
                 >Day Planner</a
               >
